fix: align timeline circle to center

--- a/style.css
+++ b/style.css
@@ -238,10 +238,12 @@ section.visible {
     background-color: var(--card-background);
     border-radius: var(--border-radius);
     padding: 1.5rem 1rem;
-    text-align: center;
     font-weight: 500;
     border: 1px solid var(--border-color);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .skill-item:hover {
@@ -345,6 +347,7 @@ section.visible {
 
 .timeline-content ul li {
     margin-bottom: 0.5rem;
+    font-size: 1rem;
 }
 
 .timeline-item::after {
@@ -354,17 +357,19 @@ section.visible {
     height: 20px;
     background-color: var(--card-background);
     border: 4px solid var(--primary-color);
-    top: 28px;
+    top: 50%;
     border-radius: 50%;
     z-index: 1;
 }
 
 .timeline-item:nth-child(odd)::after {
-    right: -10px;
+    right: 0;
+    transform: translate(50%, -50%);
 }
 
 .timeline-item:nth-child(even)::after {
-    left: -10px;
+    left: 0;
+    transform: translate(-50%, -50%);
 }
 
 #education .education-grid, #certification .certification-grid {
@@ -436,6 +441,8 @@ footer p {
         width: 100%;
         padding-left: 50px;
         padding-right: 1rem;
+        display: flex;
+        align-items: center;
     }
     .timeline-item:nth-child(odd), .timeline-item:nth-child(even) {
         left: 0;
@@ -445,7 +452,8 @@ footer p {
         text-align: left;
     }
     .timeline-item::after {
-        left: 10px;
+        left: 20px;
+        transform: translateX(-50%);
     }
 }
 
@@ -464,7 +472,7 @@ footer p {
 }
 
 .timeline-content.open .responsibilities {
-    max-height: 500px; /* Adjust as needed */
+    max-height: 1000px; /* Adjust as needed */
     margin-top: 1rem;
 }
 
@@ -636,7 +644,8 @@ footer p {
     }
 
     .timeline-item::after {
-        left: 5px;
+        left: 15px;
+        transform: translate(-50%, -50%);
     }
 
     #hero {
